syntax = "proto3";

package ping;

service PingService {
  rpc Ping (PingRequest) returns (PingReply) {}
}

message PingRequest {
}

message PingReply {
}
